--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ main {
   background-position: bottom;
 }
 .blog-image3 {
-  background-image: url(img/flow03.png);
+  background-image: url( img/flow03.png);
   height: 150px;
   background-size: cover;
   background-position: bottom;
@@ -67,4 +67,18 @@ footer {
   width: 100%;
   height: 50px;
   background-color: #AAAAAA;
+}
+
+@media screen and (max-width: 768px){
+  main {
+    width: 90%;
+    display: block;
+  }
+  .blog:nth-child(1), .blog:nth-child(2) {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .blog:nth-child(3) {
+    width: 100%;
+  }
 }
